@@ -1517,7 +1517,7 @@ encountered).
 \fIspfexp\fR
 You can add a line with a an SPF explanation that will be shown to the
 sender in case of a reject. It will override the default one. You can
-use SPF macro expansion. If a domain specifies its own explanation it is
+use SPF macro expansions. If a domain specifies its own explanation it is
 going to be used instead. You can override the \fIspfexp\fR filename by
 setting \fBSPFEXP\fR environment variable.
 
@@ -1958,6 +1958,7 @@ See rfc-1893(5) for an explanation of the error codes in parentheses.
  "557 sorry, too many recipients (#5.7.1)"
 
 .SH "SEE ALSO"
+https://github.com/mbhangui/indimail-mta/wiki/0-IndiMail-Wiki,
 mysqld(1), tcp-env(1), tcp-environ(5), tcpserver(1), tcprules(1), uacl(1),
 indimail-control(5), MCDFILE(5), qmail-inject(8), qmail-cdb(8),
 qmail-queue(8), qmail-multi(8), qscanq(8), cleanq(8), qmail-remote(8),
