@@ -159,6 +159,9 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 - 21/12/2022
 87. spf.c: changed scope of strsalloc ssa variable to local
 88. dns.c: renamed dns_txtplus(), dns_ptrplus() as dns_txt(), dns_ptr()
+- 22/12/2022
+89. smtpd.c: log timeouts, regex compilation error, Bare LF errors in error
+    log
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
